# phantom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
casper/: CMakeLists.txt  CMakeLists.txt.autosave
casper/src/: app.cpp
phantom/: CMakeLists.txt
phantom/include/: application.hpp
phantom/include/phantom/: application.hpp  core.hpp  entry_point.hpp  keycodes.hpp  log.hpp  mouse_button_codes.hpp  phantom.hpp  phantom_pch.hpp
phantom/include/phantom/events/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
phantom/include/phantom/imgui/: imgui_layer.hpp
phantom/include/phantom/inputs/: input.hpp  linux_input.hpp
phantom/include/phantom/layers/: layer.hpp  layer_stack.hpp
phantom/include/phantom/windows/: linux_window.hpp  window.hpp
phantom/src/: application.cpp  core.cpp  entry_point.cpp  imgui_build.cpp  imgui_layer.cpp  layer.cpp  layer_stack.cpp  linux_input.cpp  linux_window.cpp  log.cpp  phantom.hpp  test.cpp  test.hpp
phantom/src/phantom/: application.cpp  application.hpp  core.cpp  entry_point.cpp  log.cpp  log.hpp
phantom/src/platform/opengl/: imgui_opengl3_renderer.cpp
